logo modification and desktop header menu visibility fix

--- a/less/header.less
+++ b/less/header.less
@@ -42,15 +42,18 @@
         text-decoration: underline;
       }
       #logo {
-        height: 38px;
+        height: 40px;
         // height: 34px;
-        width: 55px;
+        // width: 55px;
+        // width: 38px;
+        width: 48px;
         // width: 50px;
         // background-image: url("assets/logo/code.svg");
         background-image: url("assets/logo/Personal_logo3.svg");
+        background-image: url("assets/logo/Personal_logo4_for_web.svg");
         background-size: cover;
         // margin-right: 0px;
-        // margin: 0 auto;
+        // margin: 0
         margin: 0;
         // margin-right: 18px;
         margin-right: 12px;
@@ -235,7 +238,7 @@
         transform: rotate(180deg);
 
         .menuItems {
-          // visibility: visible;
+          visibility: visible;
           opacity: 1;
           border-top: none;
           height: auto;
